# scade-almgw-sphinx-needs

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  README.rst  index.html  pyproject.toml  robots.txt  sitemap.xml  tox.ini  versions.json
.github/: labeler.yml  labels.yml
.github/workflows/: ci_cd.yml  label.yml
doc/: Makefile  make.bat
doc/changelog.d/: 12.added.md  13.fixed.md  14.added.md  18.documentation.md  2.dependencies.md  20.added.md  21.test.md  23.dependencies.md  40.miscellaneous.md  41.miscellaneous.md  48.maintenance.md  5.added.md  54.maintenance.md  7.documentation.md  9.added.md
doc/source/: changelog.rst  conf.py  contributing.rst  index.rst
doc/source/getting-started/: index.rst
doc/source/user-guide/: index.rst
doc/styles/config/vocabularies/ANSYS/: accept.txt
examples/CruiseControl/: .gitignore
examples/CruiseControl/Documents/source/: architecture.rst  conf.py  design.rst  index.rst  introduction.rst  model.rst
examples/CruiseControl/Documents/source/needs_templates/: llr.need
examples/CruiseControl/Documents/source/requirements/: behavior.rst  driving.rst  index.rst  interface.rst  parameters.rst  pedals.rst  speed.rst
examples/CruiseControl/Libraries/libscade/: LimiterUnSymmetrical.ssl  libscade.etp  libscade.rcj  libscade.vsw  libscade.xscade  linear.xscade  pwlinear.xscade
examples/CruiseControl/Model/: Controller.ann  Controller.xscade  CruiseControl.almgp  CruiseControl.etp  CruiseControl.sphinx-needs.trace  CruiseControl.xscade  CruiseRegulation.ann  CruiseRegulation.xscade  CruiseSpeedMgt.ann  CruiseSpeedMgt.xscade  Defs.xscade  RegulationMngt.ann  RegulationMngt.xscade
examples/CruiseControl/Resources/: Design.aty  Readability.tot  Suite.json  Test.json  Traceability.aty  readme.md
src/ansys/scade/almgw_sphinx_needs/: __init__.py  almgw_sphinx_needs.properties  export.py  needs.py  options.py  register.py  settings.py  setup.py  sphinx_needs.py  trace.py  unregister.py
tests/: conftest.py  test_entry_points.py  test_metadata.py  test_needs.py  test_setup.py  test_sphinx_needs.py  test_trace.py
tests/Documents/_build/html/: needs.json
tests/Documents/source/: conf.py  index.rst
tests/MiscFiles/: MiscFiles.etp  MiscFiles.vsw
tests/Needs/_build/html/: needs.json
tests/Needs/source/: index.rst
tests/NoCache/: NoCache.etp  NoCache.vsw  needs.json
tests/NoFiles/: NoFiles.etp  NoFiles.vsw
tests/NoModel/: NoModel.etp  NoModel.sphinx-needs.reqs  NoModel.vsw
tests/Nominal/: .gitignore  Nominal.almgp  Nominal.etp  Nominal.sphinx-needs.reqs  Nominal.sphinx-needs.trace  Nominal.vsw  P.ann
tests/Pendings/: .gitignore  P.xscade  Pendings.etp  Pendings.sphinx-needs.trace  Pendings.vsw  deltas.json
tests/Settings/: Settings.vsw
tests/Settings/First/: First.etp
tests/Settings/Second/: Second.etp
tests/UnknownProject/: UnknownProject.etp  UnknownProject.sphinx_needs.reqs  UnknownProject.vsw
tests/WrongSchema/: WrongSchema.etp  WrongSchema.vsw
tests/ref/: merge_links.xml  miscfiles_import.xml  needs.xml  nocache_export.llrs  nocache_export.trace  nocache_export_model.json  nominal_export.llrs  nominal_export.reqs  nominal_export.trace  pendings_import.xml  setup_all.etp  setup_none.etp  wrongschema_export.llrs
tests/res/: merge_links.xml
version/: index.html
version/0.1/: changelog.html  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.1/_sources/: changelog.rst.txt  contributing.rst.txt
version/0.1/_static/: search.json
version/0.1/getting-started/: index.html
version/0.1/user-guide/: index.html
version/0.2/: announcement.html  changelog.html  contributing.html  examples.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.2/_static/: search.json
version/0.2/getting-started/: index.html
version/0.2/user-guide/: index.html
version/0.3/: changelog.html  examples.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.3/_sources/: changelog.rst.txt  examples.rst.txt
version/0.3/_static/: search.json
version/0.3/getting-started/: announcement.html  index.html
version/0.4/: contributing.html  genindex.html  index.html  objects.inv
version/0.4/_sources/getting-started/: index.rst.txt
version/0.4/_static/: search.json
version/0.4/getting-started/: index.html
version/0.4/user-guide/: index.html
version/dev/: changelog.html  contributing.html  examples.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/dev/_sources/: changelog.rst.txt
version/dev/_sources/getting-started/: index.rst.txt
version/dev/_sources/user-guide/: index.rst.txt
version/dev/_static/: search.json
version/dev/getting-started/: index.html
version/dev/user-guide/: index.html
version/stable/: changelog.html  contributing.html  examples.html  index.html  search.html
version/stable/_sources/: examples.rst.txt  index.rst.txt
version/stable/user-guide/: index.html
(+5 files in other folders)
